SL-013 CP-0054: add standalone Synesis CLI distribution